@@ -1,0 +1,2 @@
+GFXINC += $(GFXLIB)/drivers/gdisp/WS29EPD
+GFXSRC += $(GFXLIB)/drivers/gdisp/WS29EPD/gdisp_lld_WS29EPD.c
